# ntxbuild

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/source/: api_examples.md  conf.py  features.md  how_it_works.md  index.rst  ntxbuild.rst  quick_start.md
ntxbuild/: __init__.py  build.py  cli.py  config.py  env_data.py  nuttx.py  setup.py  utils.py
tests/: __init__.py  _test_config.py  conftest.py  test_build.py  test_build_make.py  test_cli.py  test_config.py  test_config_cmake.py  test_config_make.py  test_conftest.py  test_env_data.py  test_logging_demo.py  test_nuttx.py
